# agentic-file-explorer

./: .gitignore  README.md  agent.py  agent_tools.py  arguments.py  basic_file_functions.py  chat_meta.py  compare.py  configs.py  context.py  csv_file_functions.py  csv_functions.py  csv_tools.py  directory_functions.py  directory_tools.py  file.py  file_dictionary.py  hierarchical_agent_tools.py  logger.py  main.py  mcp_server.py  no_context_agent.py  pyproject.toml  remote_agent.py  rollback.py  rollback_tools.py  server.py  setup_directory.py  stm.py  stm_context_agent.py  stm_loader.py  string_functions.py  traversal_functions.py  traversal_tools.py  txt_file_functions.py  txt_functions.py  txt_tools.py  ui.py
configs/: args_config.json  base_model_config.json  sandbox_config.json  stm_config.json  tool_config.json  ui_configs.json
prompts/assistant_prompts/: summary_prompt.md  summary_prompt.txt
prompts/system_prompts/: base_prompt.md  base_prompt.txt  csv_agent_prompt.md  directory_agent_prompt.md  reference_instructions.md  reference_instructions.txt  summary_prompt.md  summary_prompt.txt  traversal_agent_prompt.md  txt_agent_prompt.md
system_prompts/: summary_prompt.txt
tests/: test_agent_file_context.py  test_basic_file_functions.py  test_csv_file_functions.py  test_directory_functions.py  test_file_dictionary.py  test_file_model.py  test_setup_directory.py  test_string_functions.py  test_traversal_functions.py  test_txt_file_functions.py
