[project]
name = "Agentic File Explorer"
version = "0.1.0"
description = "File explorer that uses Agentic Frameworks to perform tasks such as file reading, writing, and summarization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
]
