[project]
name = "agentic-file-explorer"
version = "0.1.0"
description = "File explorer that uses Agentic Frameworks to perform tasks such as file reading, writing, and summarization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "langchain>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "mcp[cli]>=1.0.0",
]
